# music-ml-pipeline

./: .gitignore  README.md  pyproject.toml  requirements.txt
scripts/: evaluate_model.py  generate_synthetic_dataset.py  run_chatbot_demo.py  run_inference.py  run_training.py
src/playcatch/application/evaluation/: model_evaluator.py
src/playcatch/application/pipelines/: inference_pipeline.py  training_pipeline.py
src/playcatch/application/strategies/: feature_strategies.py  validation_strategies.py
src/playcatch/chatbot/: conversation_service.py  engine.py  interfaces.py
src/playcatch/config/: logging_config.py  settings.py
src/playcatch/domain/: entities.py  exceptions.py  interfaces.py
src/playcatch/infrastructure/data_sources/: csv_source.py
src/playcatch/infrastructure/factories/: model_factory.py  sentiment_factory.py
src/playcatch/infrastructure/llm/: gemini_client.py
src/playcatch/infrastructure/models/: lightgbm_recommender.py
src/playcatch/infrastructure/sentiment/: ground_truth_analyzer.py  huggingface_analyzer.py
tests/: conftest.py
tests/integration/: test_conversation_service.py  test_training_pipeline.py
tests/unit/: test_chatbot_engine.py  test_ground_truth_analyzer.py  test_lightgbm_recommender.py  test_model_evaluator.py  test_sentiment_analyzer.py
